--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ a {
 
 
 .top{
-  background-image: url(/image/top2.JPG);
+  background-image: url(https://kurinoppe.github.io/kuri-portfolio/image/top2.JPG);
   background-position: center;
 }
 .top-cont{
